Upgrade Java 8 -> 17 and dependencies for Java 17 compatibility
Co-Authored-By: Nate Kanat <nate.kanat@gmail.com>